Got rid of JS alerts and confirms.

--- a/Oljeopardy/Views/Category/Category.cshtml
+++ b/Oljeopardy/Views/Category/Category.cshtml
@@ -16,6 +16,9 @@
                 <label asp-for="Name"></label>
                 <input asp-for="Name" class="form-control" />
             </div>
+            <div id="mustNameCategoryWarning" class="field-validation-text col-xs-12" style="display: none">
+                <strong>Du skal navngive din kategori.</strong>
+            </div>
         </div>
         <p>
             <div class="row points-group">
