--- a/Oljeopardy/Views/Home/Index.cshtml
+++ b/Oljeopardy/Views/Home/Index.cshtml
@@ -50,10 +50,12 @@
                             <button type="button" onclick="loadGame()" class="menubutton">Gå til spillet</button>
                         </div>
                         <div class="row button-container">
-                            <button type="button" onClick="leaveGame(this)" class="menubutton has-spinner">
-                                <span class="spinner"><i class="fas fa-spinner fa-spin fa-lg"></i></span>
-                                <span class="btn-text">Forlad spillet</span>
+                            <button type="button" onClick="showElement('leaveGameModal')" class="menubutton">
+                                Forlad spillet
                             </button>
+                        </div>
+                        <div id="leaveGameError" class="field-validation-text col-xs-12" style="display: none">
+                            <strong>Du kan ikke forlade spillet, når det er din tur til at gøre noget.</strong>
                         </div>
                     }
                 }
