--- a/Oljeopardy/Views/Shared/_Layout.cshtml
+++ b/Oljeopardy/Views/Shared/_Layout.cshtml
@@ -53,5 +53,7 @@
     <div>
     @RenderSection("Scripts", required: false)
     </div>
+    
+    @Html.Partial("~/Views/Shared/_Modals.cshtml")
 </body>
 </html> 
