--- a/Oljeopardy/Views/Game/Add.cshtml
+++ b/Oljeopardy/Views/Game/Add.cshtml
@@ -10,11 +10,17 @@
                     <label asp-for="GameName"></label>
                     <input asp-for="GameName" class="form-control" />
                 </div>
+                <div id="enterGameNameWarning" class="field-validation-text col-xs-12" style="display: none">
+                    <strong>Indtast et navn til spillet.</strong>
+                </div>
                 <div class="col-xs-12">
                     <select class="form-control" asp-for="ChosenCategoryGuid"
                             asp-items="@(new SelectList(Model.CategoryList, "Id", "Name"))" class="dropdown">
                         <option selected disabled>Vælg en kategori</option>
                     </select>
+                </div>
+                <div id="chooseCategoryWarning" class="field-validation-text col-xs-12" style="display: none">
+                    <strong>Vælg en kategori, du vil bruge i spillet.</strong>
                 </div>
                 <input type="button" class="menubutton" value="Opret spil" onClick="completeAddGame()" />
             </div>
