--- a/Oljeopardy/Views/Home/Game.cshtml
+++ b/Oljeopardy/Views/Home/Game.cshtml
@@ -182,11 +182,7 @@ else
             }
 
             <div class="row button-container" id="EatYourNoteButton">
-                <button type="button" onclick="eatYourNote()" class="menubutton">Æd den selv!</button>
-            </div>
-            <div id="EatYourNoteMessage" style="display: none;">
-                <div style="height: 6px;"></div>
-                <h4>Du har trykket Æd den selv.</h4>
+                <button type="button" onclick="showElement('eatYourNoteModal')" class="menubutton">Æd den selv!</button>
             </div>
         }
         @if (Model.UserTurnType == Enums.TurnType.Guess && Model.Game != null)
