--- a/Oljeopardy/Views/Shared/_Layout.cshtml
+++ b/Oljeopardy/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/Main.css" />
+        <link rel="stylesheet" href="~/css/site.css" />
         <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     </environment>
     <environment exclude="Development">
